tests/ui/parser/issues/issue-10392-2.stderr
error: expected `}`, found `,`
  --> $DIR/issue-10392-2.rs:8:15
   |
LL |     let A { .., } = a();
   |             --^
   |             | |
   |             | expected `}`
   |             `..` must be at the end and cannot have a trailing comma
   |
help: remove this comma
   |
LL -     let A { .., } = a();
LL +     let A { .. } = a();
   |

error: aborting due to 1 previous error

